experimental/parser/testdata/parser/syntax/syntax_2023.proto.stderr.txt
error: editions must use the `edition` keyword
  --> testdata/parser/syntax/syntax_2023.proto:1:1
   |
 1 | syntax = "2023";
   | ^^^^^^
  help: replace with `edition`
   |
 1 | - syntax = "2023";
 1 | + edition = "2023";
   |

encountered 1 error
